@@ -45,6 +45,7 @@
 35. Fix covers settings from wizard not being saved.
 36. Don't report errors when listing playlists, as MPD reports error if user
     has disabled these.
+37. Add genius.com to list of lyrics providers.
 
 2.3.0
 -----
